# we-plays

./: .gitignore  LICENSE  push.ps1
resources/: installer.nsh
resources/app/: index.html  package-lock.json  package.json  vite.config.js
resources/app/src/: tauri-bridge.js
resources/app/src-tauri/: Cargo.toml  tauri.conf.json
resources/app/src-tauri/capabilities/: default.json
resources/app/src-tauri/icons/: icon.icns
resources/app/src-tauri/src/: commands.rs  db.rs  downloader.rs  lan_share.rs  lib.rs  main.rs
resources/app/src/main/: audiobookDownloader.js  downloader.js  index.js  ipc-handlers.js  library.js  librivox.js  preload.js  tray-manager.js
resources/app/src/renderer/: App.jsx  index.css  main.jsx
resources/app/src/renderer/components/: AlbumView.jsx  ArtistView.jsx  BookmarksView.jsx  DownloadModal.jsx  FingerprintModal.jsx  GlobalSearchView.jsx  LanShareModal.jsx  LinkDownloadSection.jsx  LyricsView.jsx  PlaylistView.jsx  SearchView.jsx  SettingsView.jsx  ShortcutsModal.jsx  SmartPlaylistsView.jsx  SpPlayerBar.jsx  SpRightPanel.jsx  SpSidebar.jsx  SpSongRow.jsx  SpTopBar.jsx  SpWindowControls.jsx  SpotifyHeart.jsx  StatsView.jsx  UpdateBanner.jsx  Visualizer.jsx  YouTubeSearchView.jsx
resources/app/src/renderer/components/audiobooks/: AudiobookCard.jsx  AudiobookDetailView.jsx  (+5 more)
resources/app/src/renderer/services/: audiobookApi.js
resources/app/src/renderer/store/: activePlayerStore.js  audiobookPlayerStore.js  audiobookStore.js  downloadStore.js  libraryStore.js  playerStore.js
website/: index.html  install-deps.bat  style.css
